# Stver

./: CMakeLists.txt  Version.h.in  cppcheck.cmd  cppcheck.sh  lupdate-all-projects.sh  mkrel-astraO211_noserv.sh  mkrel-astraSE16_noserv.sh  mkrel-board-arch-cross.sh  mkrel-board-br-cross.sh  mkrel-board-brnpi-cross.sh  mkrel-board-brnpi1-cross.sh  mkrel-board-brnvnano-cross.sh  mkrel-board-broxu4-cross.sh  mkrel-board-brvsks-cross.sh  mkrel-board-cross.sh  mkrel-board-gps-cross.sh  mkrel-board-gps-npi-cross.sh  mkrel-board-gps-nv-cross.sh  mkrel-board-gps-pi-cross.sh  mkrel-board-nvjnano-cross.sh  mkrel-board-nvnx-cross.sh  mkrel-board-nvnx.sh  mkrel-board-opi5-cross.sh  mkrel-board-u22.04.sh  mkrel-board.sh  mkrel-coverage.sh  mkrel-landserver-arch-cross.sh  mkrel-landserver-br-cross.sh  mkrel-landserverffdecode.sh  mkrel.sh  mkrelQt5_landserverffdecode.cmd  mkrelQt5_noserv.cmd  mkrelQt5_viscacl.cmd  mkrel_my.cmd  mkrel_onboardQt5.cmd  qt.conf.in  version.ini.in
