cmake_minimum_required(VERSION 3.5)
project(AirView)

set(COMMONINIT_SETUP_LANG_STANDARD_DISABLE ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(PROJECT_NAME_GLOBAL Av)
set(PROJECT_NAME_GLOBAL_OLD SkyHobbit)
set(linguas "ru,pt")

if(WIN32)
	set(CMAKE_FIND_LIBRARY_SUFFIXES "" ".dll" ".lib" ".a")
	set(WIN32_BT_LIBRARIES "-lbfd -lintl -liberty -limagehlp")
	cmake_policy(SET CMP0020 NEW)
	cmake_policy(SET CMP0058 NEW)
endif()

set(VERSION_SUFFIX "GIT")

include(CheckIncludeFile)
include(CheckIncludeFiles)
include(CheckFunctionExists)
include(FindPkgConfig)
include(CheckCXXSourceCompiles)
#find_package(PkgConfig)
find_package(Git)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

set(CMAKE_AUTOMOC OFF)
set(CMAKE_AUTOUIC OFF)
set(CMAKE_AUTORCC OFF)

#if (CMAKE_VERSION VERSION_GREATER "3.0.0")
#	set(CMAKE_AUTOUIC OFF)
#	set(CMAKE_AUTORCC OFF)
#endif()

include(UsefulMacros)

option(LAND "Land" ON)
option(LANDSERVER_ONLY "Land -- only server" ON)
option(LANDCLIENT_ONLY "Land -- only client" ON)
option(LANDSERVER_INSTALL_AS_SERVICE "Install LandServer as Service" OFF)
option(SKY_TUN_DIAGNOSTIC "Diagnostic board TUN via ssh" OFF)

option(BOARD "Board software" ON)
option(MAKE_TESTS "Make Tests" ON)
option(MAKE_HW_TESTS "Make HW Tests" ON)
option(INSTALL_RUNTIME_PATH "Install rpath" OFF)
option(INSTALL_RUNTIME_LIBS "Install runtime libs" OFF)
option(USE_MAP "Build with Map" ON)

option(USE_COVERAGE "Run coverage for statistics" OFF)
option(CREATE_TR "Dynamical create qrc with qm files" ON)
option(CREATE_BUNDLE "Create bundle on install" OFF)
option(USE_SHARED_OUTPUT "Place all build binaries on one common directory bin" OFF)

option(USE_QT5 "Build with Qt5" ON)
option(LANDCLIENT_SPLASH "Use splash in Land Client" ON)
option(LANDCLIENT_SRTMHGT "Use SrtmHgt" ON)
option(LANDFFMPEG "Use ffmpeg for create video & resize jpeg" ON)
option(ROHC "Use robust header compression in Tun Net" OFF)
option(LANDSERVER_CLIENTEAPI "Land -- example client for land server extern api " OFF)
option(USE_LTO "Use lto" OFF)
option(INSTALL_SYSTEMD_SERVICES "Install systemd service files" ON)
option(GENERATE_OPK "Build opkg package" OFF)
option(WITH_ONVIF "Build ONVIF protocol support for RTSP video cameras" OFF)
option(PROTOBUF_FULL_LIB "build with full protobuf" ON)
option(UDPFORWARD_TEST "Build udp forward test" OFF)
option(LAND_EAPI "Land -- land extern api (new)" OFF)
option(INSTALL_PROFILES "Install profiles from source dir" OFF)
option(INSTALL_PROFILE_DEF_SYMLINK "Install profile default symlink" OFF)
option(USE_SANITIZER_LEAK "Use -fsanitize=leak" OFF)
option(USE_SANITIZER_ADDR "Use -fsanitize=address" OFF)
option(USE_SANITIZER_THREAD "Use -fsanitize=thread" OFF)
option(USE_SANITIZER_KERNEL_ADDR "Use -fsanitize=kernel-address" OFF)
option(USE_SANITIZER_UNDEFINED "Use -fsanitize=undefined" OFF)
option(LANDSERVER_INTERNAL "Build & Run Land Server as internal part of LandClient" ON)
option(WITH_OPENMP "Multithread rip KMZ tiles, add draw RadioProp picture" ON)
option(BOARD_ALL_IN_ONE "Build board part as multicall binary" OFF)
option(USE_SQLITE_DATABASE "Use sqlite database" ON)
option(LANDCLIENT_PROFILE_CARGO_CHANNEL "Manage cargo connection parameters" ON)
option(USE_NEURONETWORK "Build with neuro network support" ON)
option(LANDSERVER_H264TOJPEG "Decode H.264 to JPEG in server http streaming" OFF)
option(BOARD_ONLY_GPSPROVIDER "Build only agent+telemetry service" OFF)
option(RA_ANT_EMULATOR "Build Rotating Antenna Emulator" OFF)
option(VISCA_CLIENT "Build Visca Client" OFF)
option(CREATE_NSIS_INSTALLER "Create nsis installer on windows" OFF)
option(GNSSCONVERTER "Build & install GnssConverter" OFF)
option(MAVLINKGCS_CLIENT "Build Mavlink Gcs Client" OFF)
option(ROTATING_ANTENNA_UI "Build rotating antenna ui" ON)
option(ROTATING_ANTENNA_MAP_FEATURES "Build rotating antenna map features" ON)
option(REGULAR_SYSTEM "Use systemd units for common system" OFF)
option(GDAL_BOUND_ENABLE "Use this flag for include gdal in project" ON)
option(BASE_TCP_CLIENT "Build BaseTcpClient" OFF)

set(_NEED_COMPORT ON)
set(_NEED_ENET ON)
set(_NEED_PROTOBUF_PROTOCOLS ON)
set(_NEED_QXTRPC ON)
set(_NEED_QTAV ON)
set(_NEED_DATAPACKAGEROLD ON)

if (LAND AND NOT LANDSERVER_INTERNAL)
	set(_NEED_QTSERVICE ON)
endif()

if (LANDSERVER_INSTALL_AS_SERVICE)
	set(LANDSERVER_INSTALL_AS_SERVICE 1)
	set(LANDSERVER_INSTALL_AS_SERVICE_INV 0)
elseif(LANDSERVER_INTERNAL)
	set(LANDSERVER_INSTALL_AS_SERVICE 2)
	set(LANDSERVER_INSTALL_AS_SERVICE_INV 0)
else ()
	set(LANDSERVER_INSTALL_AS_SERVICE 0)
	set(LANDSERVER_INSTALL_AS_SERVICE_INV 1)
endif()

include(Trademarks)

option(NO_BACKTRACE "Build without backtrace" ON)
if(NO_BACKTRACE)
	add_definitions(-DNO_BACKTRACE)
endif()

option(USE_SCRSDK "Sony Camera Remote SDK" OFF)
#if (USE_SCRSDK)
#	set(INSTALL_RUNTIME_PATH ON)
#endif()

include(CommonInit)
find_package(Threads REQUIRED)


if (NOT COMPILE_APP_NAME)
	set(COMPILE_APP_NAME "AirView")
endif()

set(COMPILE_APP_NAME_TS ${COMPILE_APP_NAME}_ts)

if (NOT COMPILE_APP_NAME_TR)
	set(COMPILE_APP_NAME_TR "AirView")
endif()

if(USE_SHARED_OUTPUT)
	set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
	set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
	set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
endif()

list(APPEND qt_libs QtCore QtNetwork)

if (BOARD OR (LAND AND LANDCLIENT_ONLY AND USE_SQLITE_DATABASE))
	list(APPEND qt_libs QtSql)
endif()

if(USE_QT5)
	list(APPEND qt_libs QtSerialPort QtConcurrent)
endif()

if (CMAKE_CROSS_COMPILING)
	set(CMAKE_MODULE_PATH ${CROSS_CMAKE_MODULE_PATH}Qt5 ${CMAKE_MODULE_PATH})
	find_package(Qt5Core 5.0.0)
endif()

foreach(qt_lib ${qt_libs})
	if (NOT USE_QT5)
		find_package(Qt4 4.7.0 COMPONENTS ${qt_lib} REQUIRED)
	else()
		string(REPLACE "Qt" "Qt5" qt_lib ${qt_lib})
		if (CMAKE_CROSS_COMPILING)
			pkg_check_modules(${qt_lib} REQUIRED ${qt_lib}>=5.0.0)
		else()
			find_package(${qt_lib} 5.0.0 REQUIRED)
		endif()
	endif()
endforeach()

set(FULL_QT_VERSION "${QT_VERSION_MAJOR}.${QT_VERSION_MINOR}")

if(NOT USE_QT5)
	find_package(QSerialPort REQUIRED)
endif()

if(USE_QT5 AND CREATE_TR)
	#if (CMAKE_CROSS_COMPILING)
	#set(CMAKE_MODULE_PATH ${CROSS_CMAKE_MODULE_PATH}Qt5LinguistTools ${CMAKE_MODULE_PATH})
	#endif()
	find_package(Qt5LinguistTools REQUIRED)
endif()

add_definitions(-DQXT_STATIC -DBUILD_QXT) # FOR QXT

find_package(Protobuf REQUIRED)
find_package(Exiv2)
if(ROHC)
	find_package(ROHC)
endif()
find_package(TurboJpeg REQUIRED)

if(LAND AND UNIX)
	find_package(X11)
endif()

if(WIN32)
#	add_definitions(-DUNICODE)
	if (MSVC)
		add_definitions(-D_USE_MATH_DEFINES)
	endif()
endif()

if(UNIX AND BOARD)
	find_package(Gphoto)
	if(WITH_ONVIF)
		find_package(OpenSSL)
		add_definitions(-DWITH_PURE_VIRTUAL -DWITH_OPENSSL)
	endif()
endif()

if(LAND)

	if((LANDSERVER_ONLY AND LANDSERVER_H264TOJPEG) OR (LANDCLIENT_ONLY AND LANDFFMPEG))
		find_package(FFMPEG REQUIRED)
		if(WIN32)
			if (MSVC)
				set(FFMPEG_LIBRARIES ${FFMPEG_LIBRARIES} secur32.lib ws2_32.lib)
			else()
				set(FFMPEG_LIBRARIES ${FFMPEG_LIBRARIES} -lsecur32 -lz -lws2_32)
			endif()
		endif()
	endif()

	if(LANDCLIENT_ONLY OR LANDSERVER_CLIENTEAPI OR VISCA_CLIENT)

		if(USE_QT5)
			find_package(Qt5Widgets 5.0.0 REQUIRED)
			list(APPEND qt_libs QtWidgets)
			if (UNIX AND CMAKE_CROSS_COMPILING)
				pkg_check_modules(Qt5XcbQpa REQUIRED Qt5XcbQpa>=5.0.0)
			endif()
		endif()

		list(APPEND qt_libs QtGui)

	endif()

	foreach(qt_lib ${qt_libs})
		if (NOT USE_QT5)
			find_package(Qt4 4.7.0 COMPONENTS ${qt_lib} REQUIRED)
		else()
			string(REPLACE "Qt" "Qt5" qt_lib ${qt_lib})
			if (CMAKE_CROSS_COMPILING)
				find_package(${qt_lib} 5.0.0 REQUIRED)
				pkg_check_modules(${qt_lib} REQUIRED ${qt_lib}>=5.0.0)
			else()
				find_package(${qt_lib} 5.0.0 REQUIRED)
			endif()
		endif()
	endforeach()

	if(LANDCLIENT_ONLY)
		list(APPEND qt_libs QtSvg QtOpenGL QtPrintSupport)
		if (USE_QT5)
			list(APPEND qt_libs QtMultimedia QtWebSockets)
		endif()
		if (USE_QT5 AND WIN32)
			list(APPEND qt_libs QtWinExtras)
		endif()
		foreach(qt_lib ${qt_libs})
			if (NOT USE_QT5)
				find_package(Qt4 4.7.0 COMPONENTS ${qt_lib} REQUIRED)
			else()
				string(REPLACE "Qt" "Qt5" qt_lib ${qt_lib})
				if (CMAKE_CROSS_COMPILING)
					pkg_check_modules(${qt_lib} REQUIRED ${qt_lib}>=5.0.0)
				else()
					find_package(${qt_lib} 5.0.0 REQUIRED)
				endif()
			endif()
		endforeach()
		#find_package(OpenGL REQUIRED)
		find_package(Proj4 REQUIRED)
		find_package(OpenCV REQUIRED)
		find_package(SDL2 REQUIRED)
		find_package(QtAV REQUIRED)
		if(LANDCLIENT_SRTMHGT)
			add_definitions(-DLANDCLIENT_SRTMHGT)
		endif()
		if(WITH_OPENMP)
			find_package(OpenMP)
			if (OPENMP_FOUND)
				set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
				set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
			endif()
		endif()

	endif()

	if(LANDCLIENT_ONLY OR LANDSERVER_CLIENTEAPI OR VISCA_CLIENT)
		unset(QT_DONT_USE_QTGUI)
	endif()

endif()

configure_file(
	"${PROJECT_SOURCE_DIR}/version.ini.in"
	"${PROJECT_BINARY_DIR}/version.ini")

configure_file(
	"${PROJECT_SOURCE_DIR}/Version.h.in"
	"${PROJECT_BINARY_DIR}/VersionGlobal.h")

include_directories(${PROJECT_BINARY_DIR})

#if(WIN32)
#	install(FILES ${PROJECT_BINARY_DIR}/version.ini DESTINATION ${CLIENT_DATA_DIR})
#endif()

set(NSIS_EXE_FOR_LINKS
	""
	CACHE STRING "" FORCE)

add_subdirectory(src)

set(CPACK_NSIS_ENABLE_REBOOT_AFTER_INSTALL false)

set(CPACK_PACKAGE_VERSION ${PROJECTVERSION})
set(CPACK_GENERATOR "TXZ")
set(CPACK_SET_DESTDIR ON)
set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME_LOW}_${PROJECTVERSION}")
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY 0)
set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECTVERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PROJECTVERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${PROJECTVERSION_PATCH})
set(CPACK_PACKAGE_VERSION ${PROJECTVERSION})
set(CPACK_DEBIAN_PACKAGE_MAINTAINER ${ORGANIZATION_NAME})
set(CPACK_DEBIAN_PACKAGE_SECTION "misc")
set(CPACK_DEBIAN_PACKAGE_NAME "${PROJECT_NAME_LOW}")
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)

foreach(item ${CPACK_GENERATOR_ADD})
	list(APPEND CPACK_GENERATOR ${item})
endforeach()

if(UNIX AND SPEC STREQUAL "astra" AND LAND)
	set(CPACK_GENERATOR "DEB;TGZ")
	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
	if(LANDCLIENT_ONLY)
		set(CPACK_DEBIAN_PACKAGE_NAME ${COMPILE_APP_NAME})
		set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Land control tool for equal version board software")
		set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/services/astra/client/postinst;${CMAKE_CURRENT_SOURCE_DIR}/services/astra/client/postrm;")
	elseif(LANDSERVER_ONLY)
		set(CPACK_DEBIAN_PACKAGE_NAME "${COMPILE_APP_NAME}Server")
		install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/services/astra/${CPACK_DEBIAN_PACKAGE_NAME} DESTINATION /etc/init.d/
			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
			GROUP_EXECUTE GROUP_READ
			WORLD_EXECUTE WORLD_READ )
		install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/services/astra/${CPACK_DEBIAN_PACKAGE_NAME}.monitrc DESTINATION /etc/monit/conf.d/ RENAME "${CPACK_DEBIAN_PACKAGE_NAME}")
		set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "AirView Land - Server
			Reworking AirView Land control tool for equal version board software - Server
			")
		#set(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt4-core (>= 4.8.3), libqt4-network (>= 4.8.3), monit (>=5.4)")
		set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/services/astra/server/postinst;${CMAKE_CURRENT_SOURCE_DIR}/services/astra/server/preinst;${CMAKE_CURRENT_SOURCE_DIR}/services/astra/server/prerm;${CMAKE_CURRENT_SOURCE_DIR}/services/astra/server/postrm;")
	endif(LANDCLIENT_ONLY)
	set(CPACK_PACKAGE_FILE_NAME "${CPACK_DEBIAN_PACKAGE_NAME}_${PROJECTVERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")
elseif(WIN32)
	set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/win32/)
	set(CPACK_GENERATOR "ZIP")
	set(CPACK_SET_DESTDIR OFF)
	set(CPACK_PACKAGE_VENDOR "${ORGANIZATION}")
	set(CPACK_NSIS_INSTALL_ROOT "C:")
	set(CPACK_NSIS_COMPRESSOR "zlib")
	set(CPACK_PACKAGE_NAME "${COMPILE_APP_NAME}")

	set(CPACK_PACKAGE_COMPANYNAME "${ORGANIZATION}")

	if(LANDCLIENT_ONLY)
		if(CREATE_NSIS_INSTALLER)
			set(CPACK_GENERATOR "${CPACK_GENERATOR};NSIS")
		endif()
		set(CPACK_PACKAGE_NAME "${COMPILE_APP_NAME}")

		if(NOT LANDCLIENT_PROFILE_CARGO_CHANNEL)
			set(CPACK_PACKAGE_NAME "${CPACK_PACKAGE_NAME}NoCargochannel")
		endif()

		set(CPACK_NSIS_INSTALLED_ICON_NAME "${COMPILE_APP_NAME}.exe")
		set(CPACK_NSIS_INSTALLER_MUI_FINISHPAGE_RUN_CODE "!define MUI_FINISHPAGE_RUN '$INSTDIR\\\\${COMPILE_APP_NAME}.exe'")
		list(APPEND CPACK_NSIS_CREATE_ICONS_EXTRA "
			CreateShortCut '$DESKTOP\\\\${COMPILE_APP_NAME}-${PROJECTVERSION}.lnk' '$INSTDIR\\\\${CPACK_NSIS_INSTALLED_ICON_NAME}'
			")
		list(APPEND CPACK_NSIS_DELETE_ICONS_EXTRA "
			Delete '$DESKTOP\\\\${COMPILE_APP_NAME}-${PROJECTVERSION}.lnk'
			")

	elseif(LANDSERVER_ONLY AND NOT LANDCLIENT_ONLY)
		set(CPACK_GENERATOR "${CPACK_GENERATOR};NSIS")
		set(CPACK_PACKAGE_NAME "${COMPILE_APP_NAME}Server")
		set(CPACK_NSIS_INSTALLED_ICON_NAME "${COMPILE_APP_NAME}Server.exe")

	endif()

	set(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_NAME} ${PROJECTVERSION}")
	set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${CPACK_PACKAGE_NAME})
	set(CPACK_PACKAGE_INSTALL_DIRECTORY "${PROJECT_NAME}\\\\${CPACK_PACKAGE_NAME}_${PROJECTVERSION}")
	set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}Setup_${PROJECTVERSION}")
	set(CPACK_PACKAGE_INSTALL_REGISTRY_KEY ${CPACK_NSIS_DISPLAY_NAME})

	unset(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS)
	unset(NSIS_MENU_LINKS)

	#Setting bat for remove previous
	configure_file(
		"${CMAKE_CURRENT_SOURCE_DIR}/win32/uninstallPrevious.bat"
		"${PROJECT_BINARY_DIR}/uninstallPrevious.bat")

	if ( (LANDCLIENT_ONLY OR LANDSERVER_ONLY) AND LANDSERVER_INSTALL_AS_SERVICE AND NOT LANDSERVER_INTERNAL)
		set(preinst_land_serv_service_path "${CMAKE_CURRENT_SOURCE_DIR}/win32/preinstall/stop_land_serv_service.nsh")
		string(REPLACE "/" "\\\\" preinst_land_serv_service_path_out ${preinst_land_serv_service_path})
		set(CPACK_NSIS_EXTRA_PREINSTALL_COMMANDS "!include ${preinst_land_serv_service_path_out}")

		set(inst_land_serv_service_path "${CMAKE_CURRENT_SOURCE_DIR}/win32/inst_land_serv_service.nsh")
		string(REPLACE "/" "\\\\" inst_land_serv_service_path_out ${inst_land_serv_service_path})
		set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "!include ${inst_land_serv_service_path_out}")

		set(uninst_land_serv_service_path "${CMAKE_CURRENT_SOURCE_DIR}/win32/uninst_land_serv_service.nsh")
		string(REPLACE "/" "\\\\" uninst_land_serv_service_path_out ${uninst_land_serv_service_path})
		set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "!include ${uninst_land_serv_service_path_out}")
	endif()

	if (LANDCLIENT_ONLY OR LANDSERVER_ONLY)
		set(rem_previous_version_path "${CMAKE_CURRENT_SOURCE_DIR}/win32/uninst_previous_versions.nsh")
		string(REPLACE "/" "\\\\" rem_previous_version_path ${rem_previous_version_path})
		set(CPACK_NSIS_UNINSTALL_PREINSTALL_COMMANDS "!include ${rem_previous_version_path}")
	endif()

	if (LANDCLIENT_ONLY)
		set(rem_map_cache_path "${CMAKE_CURRENT_SOURCE_DIR}/win32/inst_map_cache.nsh")
		string(REPLACE "/" "\\\\" rem_map_cache_path ${rem_map_cache_path})
		set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "${CPACK_NSIS_EXTRA_INSTALL_COMMANDS}\n !include ${rem_map_cache_path}")

		set(rem_inst_video_shortcut "${CMAKE_CURRENT_SOURCE_DIR}/win32/inst_video_default.nsh")
		string(REPLACE "/" "\\\\" rem_inst_video_shortcut ${rem_inst_video_shortcut})
		set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "${CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS}\n !include ${rem_inst_video_shortcut}")

		set(rem_inst_firewall_path "${CMAKE_CURRENT_SOURCE_DIR}/win32/inst_firewall.nsh")
		string(REPLACE "/" "\\\\" rem_inst_firewall_path ${rem_inst_firewall_path})
		set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "${CPACK_NSIS_EXTRA_INSTALL_COMMANDS}\n !include ${rem_inst_firewall_path}")

		set(rem_uninst_firewall_path "${CMAKE_CURRENT_SOURCE_DIR}/win32/uninst_firewall.nsh")
		string(REPLACE "/" "\\\\" rem_uninst_firewall_path ${rem_uninst_firewall_path})
		set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "${CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS}\n !include ${rem_uninst_firewall_path}")
	endif()

	if (LANDCLIENT_ONLY AND SUPPORT_Panorama_MAP)
		set(rem_reg_panorama_path "${CMAKE_CURRENT_SOURCE_DIR}/win32/inst_panorama12_lib.nsh")
		string(REPLACE "/" "\\\\" rem_reg_panorama_path ${rem_reg_panorama_path})
		set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "${CPACK_NSIS_EXTRA_INSTALL_COMMANDS}\n !include ${rem_reg_panorama_path}")
	endif()

	if (LANDCLIENT_ONLY AND SUPPORT_Mapinfo_MAP)
		set(rem_reg_mapxlib_path "${CMAKE_CURRENT_SOURCE_DIR}/win32/inst_mapx_lib.nsh")
		string(REPLACE "/" "\\\\" rem_reg_mapxlib_path ${rem_reg_mapxlib_path})
		set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "${CPACK_NSIS_EXTRA_INSTALL_COMMANDS}\n !include ${rem_reg_mapxlib_path}")
	endif()

	foreach(NSIS_EXE_FOR_LINK ${NSIS_EXE_FOR_LINKS})
		set(CPACK_NSIS_MENU_LINKS ${CPACK_NSIS_MENU_LINKS} "${NSIS_EXE_FOR_LINK}.exe" "${NSIS_EXE_FOR_LINK}")
		configure_file(${CMAKE_CURRENT_SOURCE_DIR}/win32/uninst_kill_process_extra.nsh.in ${PROJECT_BINARY_DIR}/uninst_kill_process_extra.nsh.${NSIS_EXE_FOR_LINK} @ONLY)
		string(REPLACE "/" "\\\\" uninst_nsis_kill_extra_path_out ${PROJECT_BINARY_DIR}/uninst_kill_process_extra.nsh.${NSIS_EXE_FOR_LINK})
		set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS
			"${CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS}
			!include ${uninst_nsis_kill_extra_path_out}
			")

	endforeach()
endif()

if(INSTALL_RUNTIME_LIBS)
#	if(LAND AND NSL_LIBRARY AND LANDSERVER_ONLY)
#		install(FILES ${NSL_LIBRARY} DESTINATION ${LIBDIR})
#	endif()
	if(HOST STREQUAL linux AND SPEC STREQUAL astra)
		if(OPENCV_LIBRARIES AND LANDCLIENT_ONLY)
			foreach(ocv_lib ${OPENCV_LIBRARIES})
				get_filename_component(OPENCV_LIBRARY_DIR ${ocv_lib} PATH)
				string(FIND ${OPENCV_LIBRARY_DIR} ${PROJECT_BASE_DIR} ocv_lib_local)
				if(ocv_lib_local GREATER_EQUAL 0)
					get_filename_component(OPENCV_LIBRARY_NAME ${ocv_lib} NAME)
					file(GLOB ocv_libs ${OPENCV_LIBRARY_DIR}/${OPENCV_LIBRARY_NAME}*)
					install(FILES ${ocv_libs} DESTINATION ${LIBDIR})
				endif()
			endforeach()
		endif()
		if(TURBOJPEG_LIBRARY AND LANDSERVER_ONLY)
			get_filename_component(TURBOJPEG_LIBRARY_DIR ${TURBOJPEG_LIBRARY} PATH)
			string(FIND ${TURBOJPEG_LIBRARY_DIR} ${PROJECT_BASE_DIR} TURBOJPEG_LIBRARY_local)
			if(TURBOJPEG_LIBRARY_local GREATER_EQUAL 0)
				get_filename_component(TURBOJPEG_LIBRARY_NAME ${TURBOJPEG_LIBRARY} NAME)
				file(GLOB tjpeg_libs ${TURBOJPEG_LIBRARY_DIR}/${TURBOJPEG_LIBRARY_NAME}*)
				install(FILES ${tjpeg_libs} DESTINATION ${LIBDIR})
			endif()
		endif()
		if(EXIV2_LIBRARY AND LANDCLIENT_ONLY)
			foreach(exiv_lib ${EXIV2_LIBRARY})
				get_filename_component(EXIV2_LIBRARY_DIR ${exiv_lib} PATH)
				string(FIND ${EXIV2_LIBRARY_DIR} ${PROJECT_BASE_DIR} exiv_lib_local)
				if(exiv_lib_local GREATER_EQUAL 0)
					get_filename_component(EXIV2_LIBRARY_NAME ${exiv_lib} NAME)
					file(GLOB exiv_libs ${EXIV2_LIBRARY_DIR}/${EXIV2_LIBRARY_NAME}*)
					install(FILES ${exiv_libs} DESTINATION ${LIBDIR})
				endif()
			endforeach()
		endif()
		if (QTAV_LIBRARIES AND QTAVWIDGETS_LIBRARIES AND LANDCLIENT_ONLY)
			foreach(qtavwidget_lib ${QTAVWIDGETS_LIBRARIES})
				get_filename_component(QTAVWIDGET_LIBRARY_DIR ${qtavwidget_lib} PATH)
				string(FIND ${QTAVWIDGET_LIBRARY_DIR} ${PROJECT_BASE_DIR} qtavwidget_lib_local)
				if(qtavwidget_lib_local GREATER_EQUAL 0 OR QTAV_INSTALL_LIBS_FORCE)
					get_filename_component(QTAVWIDGET_LIBRARY_NAME ${qtavwidget_lib} NAME)
					file(GLOB qtavwidgets_libs ${QTAVWIDGET_LIBRARY_DIR}/${QTAVWIDGET_LIBRARY_NAME}*)
					install(FILES ${qtavwidgets_libs} DESTINATION ${LIBDIR})
				endif()
			endforeach()
		endif()
		if (SDL2_LIBRARY AND LANDCLIENT_ONLY)
			get_filename_component(SDL2_LIBRARY_DIR ${SDL2_LIBRARY} PATH)
			string(FIND ${SDL2_LIBRARY_DIR} ${PROJECT_BASE_DIR} sdl2_lib_local)
			if(sdl2_lib_local GREATER_EQUAL 0 OR SDL2_INSTALL_LIBS_FORCE)
				get_filename_component(SDL2_LIBRARY_NAME ${SDL2_LIBRARY} NAME_WE)
				file(GLOB sdl2_libs ${SDL2_LIBRARY_DIR}/${SDL2_LIBRARY_NAME}*)
				install(FILES ${sdl2_libs} DESTINATION ${LIBDIR})
			endif()
		endif()
	endif()

	if(WIN32)
		if(NOT USE_QT5 AND QSERIAL_LIBRARY AND (BOARD OR LANDSERVER_ONLY))
			foreach(qserial_lib ${QSERIAL_LIBRARY})
				get_filename_component(QSERIAL_LIBRARY_DIR ${qserial_lib} PATH)
				get_filename_component(QSERIAL_LIBRARY_NAME ${qserial_lib} NAME_WE)
				string(REPLACE lib "" QSERIAL_LIBRARY_NAME_NEW ${QSERIAL_LIBRARY_NAME})
				file(GLOB qserial_libs ${QSERIAL_LIBRARY_DIR}/${QSERIAL_LIBRARY_NAME_NEW}.dll)
				install(FILES ${qserial_libs} DESTINATION ${LIBDIR})
			endforeach()
		endif()
				if(LAND AND SDL2_LIBRARY AND LANDCLIENT_ONLY)
			get_filename_component(SDL2_LIBRARY_DIR ${SDL2_LIBRARY} PATH)
			get_filename_component(SDL2_LIBRARY_NAME ${SDL2_LIBRARY} NAME_WE)
			string(REPLACE lib "" SDL2_LIBRARY_NAME_NEW ${SDL2_LIBRARY_NAME})
			file(GLOB sdl2_libs ${SDL2_LIBRARY_DIR}/${SDL2_LIBRARY_NAME_NEW}.dll)
			install(FILES ${sdl2_libs} DESTINATION ${LIBDIR})
		endif()
		if(FFMPEG_LIBRARIES AND LANDCLIENT_ONLY)
			foreach(ffmpeg_lib ${FFMPEG_LIBRARIES})
				get_filename_component(FFMPEG_LIBRARY_DIR ${ffmpeg_lib} PATH)
				file(GLOB ffmpeg_libs ${FFMPEG_LIBRARY_DIR}/*.dll)
				install(FILES ${ffmpeg_libs} DESTINATION ${LIBDIR})
			endforeach()
		endif()
		if(OPENCV_LIBRARIES AND LANDCLIENT_ONLY)
			if (MSVC)
				foreach(ocv_lib ${OPENCV_LIBRARIES})
					get_filename_component(OPENCV_LIBRARY_DIR ${ocv_lib} PATH)
					file(GLOB ocv_libs ${OPENCV_LIBRARY_DIR}/*.dll)
					install(FILES ${ocv_libs} DESTINATION ${LIBDIR})
				endforeach()
			else()
				foreach(ocv_lib ${OPENCV_LIBRARIES})
					install(FILES ${ocv_lib} DESTINATION ${LIBDIR})
				endforeach()
			endif()
		endif()
		if (MSVC)
			if(EXIV2_LIBRARY AND LANDCLIENT_ONLY)
				foreach(exiv_lib ${EXIV2_LIBRARY})
					get_filename_component(EXIV2_LIBRARY_DIR ${exiv_lib} PATH)
					get_filename_component(EXIV2_LIBRARY_NAME ${exiv_lib} NAME)
					file(GLOB exiv_libs ${EXIV2_LIBRARY_DIR}/*.dll)
					install(FILES ${exiv_libs} DESTINATION ${LIBDIR})
				endforeach()
			endif()
		endif()

		if (QTAV_LIBRARIES AND QTAVWIDGETS_LIBRARIES)
			foreach(qtavwidget_lib ${QTAVWIDGETS_LIBRARIES})
				get_filename_component(QTAVWIDGET_LIBRARY_DIR ${qtavwidget_lib} PATH)
				get_filename_component(QTAVWIDGET_LIBRARY_NAME ${qtavwidget_lib} NAME_WE)
				string(REPLACE lib "" QTAVWIDGET_LIBRARY_NAME ${QTAVWIDGET_LIBRARY_NAME})
				file(GLOB qtavwidgets_libs ${QTAVWIDGET_LIBRARY_DIR}/${QTAVWIDGET_LIBRARY_NAME}*.dll)
				install(FILES ${qtavwidgets_libs} DESTINATION ${LIBDIR})
			endforeach()
		endif()
	endif()

endif()

include(CPack)

if (GENERATE_OPK)
	if (NOT OPK_PACKAGE_NAME)
		set(OPK_PACKAGE_NAME ${PROJECT_NAME_LOW})
	endif()

	set(CPACK_PACKAGE_NAME ${OPK_PACKAGE_NAME})
	set(CPACK_OPKG_PACKAGE_MAINTAINER "Me")
	set(CPACK_OPKG_PACKAGE_SECTION "core")
	if (NOT CPACK_OPKG_PACKAGE_ARCHITECTURE)
		set(CPACK_OPKG_PACKAGE_ARCHITECTURE "armv7hf")
	endif()
	set(CPACK_OPKG_PACKAGE_ARCHITECTURE ${CPACK_OPKG_PACKAGE_ARCHITECTURE} CACHE STRING "opkg arch")
	message(STATUS "CPACK_OPKG_PACKAGE_ARCHITECTURE->${CPACK_OPKG_PACKAGE_ARCHITECTURE}")
	if (NOT CPACK_OPKG_PACKAGE_DEPENDS)
		set(CPACK_OPKG_PACKAGE_DEPENDS $ENV{CPACK_OPKG_PACKAGE_DEPENDS})
	endif()
	if (NOT CPACK_OPKG_PACKAGE_DEPENDS)
		set(CPACK_OPKG_PACKAGE_DEPENDS "rootfs (>=br10.6), rootfs (<<br11)")
	endif()
	set(CPACK_OPKG_PACKAGE_DEPENDS ${CPACK_OPKG_PACKAGE_DEPENDS} CACHE STRING "opkg deps")
	message(STATUS "CPACK_OPKG_PACKAGE_DEPENDS->${CPACK_OPKG_PACKAGE_DEPENDS}")
	set(CPACK_OPKG_PACKAGE_PRIORITY "optional")
	INCLUDE(CreateOpkg)
	ADD_OPKG_TARGETS()
endif()
